<resources>
    <string name="app_name">Cooka</string>
    <string name="shortcut_not_available">Shortcut is not available</string>
    <string name="shortcut_explore">Explore</string>
    <string name="shortcut_explore_long">Explore</string>
    <string name="shortcut_collection">Collection</string>
    <string name="shortcut_collection_long">Collection</string>
    <string name="shortcut_grocery_list">Grocery list</string>
    <string name="shortcut_grocery_list_long">Grocery list</string>
    <string name="shortcut_profile">Profile</string>
    <string name="shortcut_profile_long">Your profile</string>
    <string name="shortcut_administration">Administration</string>
    <string name="shortcut_administration_long">Administration</string>
    <string name="shortcut_database_test">Database</string>
    <string name="shortcut_database_test_long">Database Test</string>
    <string name="notif_welcome_title">Welcome to Cooka</string>
    <string name="notif_welcome_messagebody">Thank you for choosing Cooka. Please tell us what food you would like to cook and what food hashtags, collections and people you would like to follow.</string>
    <string name="notif_action_explore">Explore</string>
    <string name="notif_action_hashtags">Hashtags</string>
    <string name="notif_action_people">People</string>
    <string name="facebook_app_id">2042351182521855</string>
    <string name="fb_login_protocol_scheme">fb2042351182521855</string>
    <string name="title_activity_bottom_nav">bottomNavActivity</string>
    <string name="title_explore">Explore</string>
    <string name="title_cookbook">Cookbook</string>
    <string name="title_plan">Plan</string>
    <string name="title_cook">Cook</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="a_couple_of_seconds_ago">a couple of seconds ago</string>
    <string name="less_than_a_minute_ago">less than a minute ago</string>
    <string name="some_seconds_ago">some seconds ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="weeks_ago">%1$d weeks ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="one_week_ago">1 week ago</string>
    <string name="one_year_ago">1 year ago</string>
    <plurals name="minutes_ago_plural">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago_plural">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago_plural">
        <item quantity="one">1 days ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="weeks_ago_plural">
        <item quantity="one">1 week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="years_ago_plural">
        <item quantity="one">1 year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <string name="added_recipe_to_collection">added a recipe to <a href="">%1$s</a></string>
    <string name="added_image_to_recipe">added an image to recipe <a href="">%1$s</a></string>
    <string name="feed_message_and">and</string>
    <string name="is_now_following_user">is now following <a href="%2$s">@%1$s</a></string>
    <string name="is_now_following_users">is now following </string>
    <string name="is_now_following_user_and_user">is now following <a href="%2$s">@%1$s</a> and <a href="%4$s">@%3$s</a></string>
    <string name="is_now_following_user_and_n_others">is now following <a href="%2$s">@%1$s</a> and %3$d others</string>
    <string name="is_now_following_tag">is now following <a href="%2$s">#%1$s</a></string>
    <string name="is_now_following_tags">is now following </string>
    <string name="is_now_following_tag_and_tag">is now following <a href="%2$s">#%1$s</a> and <a href="%4$s">#%3$s</a></string>
    <string name="is_now_following_tag_and_n_others">is now following <a href="%2$s">#%1$s</a> and %3$d others</string>
    <string name="is_now_following_collection">is now following <a href="%2$s">%1$s</a></string>
    <string name="is_now_following_collections">is now following </string>
    <string name="is_now_following_collection_and_collection">is now following <a href="%2$s">%1$s</a> and <a href="%4$s">%3$s</a></string>
    <string name="is_now_following_collection_and_n_others">is now following <a href="%2$s">%1$s</a> and %3$d others</string>
    <string name="created_recipe">created recipe <a href="%2$s">%1$s</a></string>
    <string name="created_recipes">created recipes </string>
    <string name="created_recipe_and_n_more">created recipe <a href="%2$s">#%1$s</a> and %3$d more</string>
    <string name="modified_recipe">modified recipe <a href="%2$s">%1$s</a></string>
    <string name="modified_recipes">modified recipes </string>
    <string name="modified_recipe_and_n_more">modified recipe <a href="%2$s">#%1$s</a> and %3$d more</string>
    <string name="cooked_recipe">cooked recipe <a href="%2$s">%1$s</a></string>
    <string name="cooked_recipes">cooked recipes </string>
    <string name="cooked_recipe_and_n_more">cooked recipe <a href="%2$s">#%1$s</a> and %3$d more</string>
    <string name="created_collection">created collection <a href="%2$s">%1$s</a></string>
    <string name="created_collections">created collections </string>
    <string name="created_collection_and_n_more">created collection <a href="%2$s">#%1$s</a> and %3$d more</string>
    <string name="username_is_now_following_user">%1$s is now following <a href="%3$s">@%2$s</a></string>
    <string name="username_is_now_following_users">%1$s is now following </string>
    <string name="username_is_now_following_user_and_user">%1$s is now following <a href="%3$s">@%2$s</a> and <a href="%5$s">@%4$s</a></string>
    <string name="username_is_now_following_user_and_n_others">%1$s is now following <a href="%3$s">@%2$s</a> and %4$d others</string>
    <string name="username_is_now_following_tag">%1$s is now following <a href="%3$s">#%2$s</a></string>
    <string name="username_is_now_following_tags">%1$s is now following </string>
    <string name="username_is_now_following_tag_and_tag">%1$s is now following <a href="%3$s">#%2$s</a> and <a href="%5$s">@%4$s</a></string>
    <string name="username_is_now_following_tag_and_n_others">%1$s is now following <a href="%3$s">#%2$s</a> and %4$d others</string>
    <string name="username_is_now_following_collection">%1$s is now following <a href="%3$s">%2$s</a></string>
    <string name="username_is_now_following_collections">%1$s is now following </string>
    <string name="username_is_now_following_collection_and_collection">%1$s is now following <a href="%3$s">%2$s</a> and <a href="%5$s">@%4$s</a></string>
    <string name="username_is_now_following_collection_and_n_others">%1$s is now following <a href="%3$s">%2$s</a> and %4$d others</string>
    <string name="username_created_recipe">%1$s created recipe <a href="%3$s">%2$s</a></string>
    <string name="username_created_recipes">%1$s created recipes </string>
    <string name="username_created_recipe_and_n_more">%1$s created recipe <a href="%3$s">%2$s</a> and %4$d more</string>
    <string name="username_modified_recipe">%1$s modified recipe <a href="%3$s">%2$s</a></string>
    <string name="username_modified_recipes">%1$s modified recipes </string>
    <string name="username_modified_recipe_and_n_more">%1$s modified recipe <a href="%3$s">%2$s</a> and %4$d more</string>
    <string name="username_cooked_recipe">%1$s cooked recipe <a href="%3$s">%2$s</a></string>
    <string name="username_cooked_recipes">%1$s cooked recipes </string>
    <string name="username_cooked_recipe_and_n_more">%1$s cooked recipe <a href="%3$s">%2$s</a> and %4$d more</string>
    <string name="username_created_collection">%1$s created collection <a href="%3$s">%2$s</a></string>
    <string name="username_created_collections">%1$s created collections </string>
    <string name="username_created_collection_and_n_more">%1$s created collection <a href="%3$s">%2$s</a> and %4$d more</string>
    <string name="view_user_profile">View user profile</string>
    <string name="view_profile_of_user">View profile of %1$s</string>
    <string name="view_recipe">View recipe</string>
    <string name="pin_recipe">Pin recipe</string>
    <string name="cook_this_recipe_now">Cook this recipe now</string>
    <string name="browse_collection">Browse collection</string>
    <string name="browse_collection_name">Browse %1$s</string>
    <string name="browse_tag">Browse tag</string>
    <string name="browse_tag_tag">Browse tag %1$s</string>
    <string name="report_this_feed_message">Report this message</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_header">Header</string>
    <string name="profile_avatar_desc">Profile Avatar</string>
    <string name="profile_name">%1$s</string>
    <string name="profile_username">\@%1$s</string>
    <string name="profile_following_nr">%1$d </string>
    <string name="profile_follower_nr">%1$d </string>
    <string name="profile_following_text">%1$d Following</string>
    <string name="profile_follower_text">%1$d Follower</string>
    <string name="profile_adduser">Add User</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_unfollow">Unfollow</string>
    <string name="profile_followed">Followed</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">Invalid Username</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_notsame_password">Passwords aren\'t equal</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="login_background_desc">Login Background</string>
    <string name="profile_cookbook_ivw">Cookbook Imageview</string>
    <string name="headertext_follower">Follower</string>
    <string name="headertext_following">Following</string>
    <string name="headertextnr_follower">"%1$d "</string>
    <string name="text_name_customlvw">Name</string>
    <string name="text_username_customlvw">\@%1$s</string>
    <string name="custom_followees_name">Name</string>
    <string name="custom_followees_username">\@%1$s</string>
    <string name="title_activity_cook_mode">Cook Mode</string>
    <string name="ingredients_section_title">Ingredients for this step</string>
    <string name="btn_register">Register</string>
    <string name="register_with_alternative">or Register with</string>
    <string name="card_title_hint"><i>Enter title</i></string>
    <string name="card_body_hint"><i>Enter description</i></string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="register_loginredirect">Already have an account?</string>
</resources>