<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ProfileFragment">


    <ImageView
        android:id="@+id/ivwProfileheader"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:contentDescription="@string/profile_header"
        android:scaleType="centerCrop"
        android:src="@drawable/default_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <RelativeLayout
        android:id="@+id/fragment_followerframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivwProfilePicFollower"
        android:layout_width="132dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/default_avatar"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivwAdd"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:contentDescription="@string/profile_adduser"
        app:layout_constraintBottom_toBottomOf="@+id/ivwProfilePicFollower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="@+id/ivwProfilePicFollower"
        app:layout_constraintTop_toTopOf="@+id/ivwProfilePicFollower"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/vwProfileGreybar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivwProfileheader"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvwFollowernr"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/profile_follower_nr"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.706"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="8dp"
            android:text="@string/profile_follower_text"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.869"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwFollowingnr"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="8dp"
            android:text="@string/profile_following_nr"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwFollowing"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/profile_following_text"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivwCookbook"
        android:layout_width="330dp"
        android:layout_height="214dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:alpha="0.8"
        android:contentDescription="@string/profile_cookbook_ivw"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwProfileGreybar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/default_header" />

    <View
        android:id="@+id/vwProfileGreybar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="280dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvwName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="8dp"
        android:lineSpacingExtra="14sp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvwUsername"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
        android:text="@string/profile_username"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>