<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:padding="8dp"
    android:minWidth="250dp"
    android:minHeight="110dp">

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/card_hint">

    <EditText
        android:id="@+id/ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient"
        android:textColorHint="@color/card_hint"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="0.65"
            android:layout_height="wrap_content"
            android:textColorHint="@color/card_hint">

            <EditText
                android:id="@+id/ingredient_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:textColorHint="@color/card_hint"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:textColorHint="@color/card_hint">

            <EditText
                android:id="@+id/ingredient_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit"
                android:textColorHint="@color/card_hint"/>

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

</LinearLayout>
