<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    style="@style/CookModeCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_step_title"
            style="@style/CookModeText.CardSectionTitle"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/card_title"
            style="@style/CookModeText.CardTitle"
            android:hint="@string/card_title_hint"
            android:textColorHint="@color/card_hint"
            android:background="@null"/>

        <View style="@style/Divider"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/card_body"
            style="@style/CookModeText.CardBody"
            android:hint="@string/card_body_hint"
            android:textColorHint="@color/card_hint"
            android:nestedScrollingEnabled="false"
            android:background="@null"
            android:gravity="top"/>

        <LinearLayout
            android:id="@+id/ingredients_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/Divider"/>

            <TextView
                style="@style/CookModeText.CardSectionTitle"
                android:text="@string/ingredients_section_title"/>

            <app.cooka.cookapp.view.IngredientsView
                android:id="@+id/ingredients_section_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:amountIsBold="false"
                card_view:showDivider="false"
                card_view:minimumItemCount="0"
                card_view:editorMode="true"/>

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_ingredient"
                android:textColor="@color/colorAccent"
                card_view:icon="@drawable/ic_add_black_24dp"
                card_view:iconSize="20dp"
                card_view:iconTint="@color/colorAccent"
                android:background="@null"
                android:onClick="addIngredient_onClick"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_cancel_black_24dp"
            android:tint="@color/card_hint"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            android:layout_margin="0dp"
            android:onClick="currentCardDelete_onClick"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

